hphp/hack/test/typecheck/function_pointer/fun_and_clsmeth_disabled/class_meth_disabled.php
<?hh

class C {
  public static function bar(): void {
    class_meth('C', 'bar');
  }
}
